[gd_scene load_steps=3 format=3 uid="uid://bcql748qrufws"]

[ext_resource type="Script" path="res://Scenes/Weapons/submachinegun.gd" id="1_si7en"]
[ext_resource type="Texture2D" uid="uid://cb7vh7h5vujkf" path="res://More art/Guns/submachine gun.png" id="2_u8djq"]

[node name="Placeholder" type="Node2D"]
script = ExtResource("1_si7en")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(52.1895, 7.99219)
scale = Vector2(0.0997896, 0.0997896)
texture = ExtResource("2_u8djq")

[node name="BarrelEnd" type="Node2D" parent="Sprite2D"]
position = Vector2(278.691, -100.133)
scale = Vector2(10.0211, 10.0211)

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
